--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,2 @@
-VITE_API_URL=https://captionai-6wq0.onrender.com
+VITE_API_URL=http://localhost:3000
+//VITE_API_URL=https://captionai-6wq0.onrender.com
